# Pong

./: .gitignore  CMakeLists.txt  README.md  Run.bat  run.sh
src/: Game.cpp  Game.h  main.cpp
src/Entities/: Ball.cpp  Ball.h  BotPaddle.cpp  BotPaddle.h  Entity.cpp  Entity.h  Paddle.cpp  Paddle.h  PlayerPaddle.cpp  PlayerPaddle.h
src/Managers/: EntityFactory.cpp  EntityFactory.h  ScoreManager.cpp  ScoreManager.h  UIManager.cpp  UIManager.h
src/States/: GameOverState.cpp  GameOverState.h  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayingState.cpp  PlayingState.h
src/Utils/: Constants.h
